fabric/testdata/out/ing_spp-homer-put-internal-supplier-products-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-homer-master-367\":0.0,\"spp-homer-master-368\":100.0}","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/internal-supplier-products\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"3929699d-cba0-11e8-90e2-0618dc6898fa","deployment-id":"d-nq71pi3pjq8siqfx3i5toz322","pipeline-id":"l-o49bo3978wd8mgk5o73i8aim6"},"name":"spp-homer-put-internal-supplier-products-all","namespace":"default"},"spec":{"rules":[{"host":"spp-homer.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-homer-master-367","servicePort":8080},"pathType":"ImplementationSpecific"},{"backend":{"service [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-homer-master-367":0.0,"spp-homer-master-368":100.0}'
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/internal-supplier-products")
      && Method("PUT") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:48:03Z"
  generation: 277
  labels:
    controller-uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
    deployment-id: d-nq71pi3pjq8siqfx3i5toz322
    pipeline-id: l-o49bo3978wd8mgk5o73i8aim6
  name: spp-homer-put-internal-supplier-products-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-homer
    uid: 3929699d-cba0-11e8-90e2-0618dc6898fa
  resourceVersion: "1379152630"
  uid: 86f9c6a6-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: spp-homer.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-homer-api.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-supplier-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-homer-master-367
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-homer-master-368
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
